# ppc-2025-processes-retake

./: .clang-format  .gitattributes  .gitignore  .hadolint.yaml  .pre-commit-config.yaml
ppc_json/tmp/: ppc_json-mkdirs.cmake
tasks/Nazarova_K_Conv_hull_const_Grah/: info.json  report.md
tasks/Nazarova_K_Gaussian_vert_scheme/: info.json  report.md
tasks/Nazarova_K_char_count/: info.json  report.md
tasks/akhmetov_daniil_integration_monte_carlo/: info.json  report.md  settings.json
tasks/akhmetov_daniil_mesh_torus/: info.json  report.md  settings.json
tasks/akhmetov_daniil_sparse_mm_ccs/: info.json  report.md
tasks/cheremkhin_a_gaus_vert/: info.json  report.md
tasks/cheremkhin_a_matr_max_colum/: report.md
tasks/cheremkhin_a_radix_sort_batcher/: info.json  report.md
tasks/denisov_a_min_val_row_matrix/: info.json  report.md
tasks/denisov_a_quick_sort_simple_merging/: info.json  report.md
tasks/denisov_a_ring/: info.json  report.md
tasks/dergynov_s_hypercube/: info.json  report.md
tasks/dergynov_s_radix_sort_double_simple_merge/: info.json  report.md
tasks/dergynov_s_trapezoid_integration/: info.json  report.md
tasks/dilshodov_a_convex_hull/: info.json  report.md
tasks/dilshodov_a_max_val_rows_matrix/: info.json  report.md
tasks/dilshodov_a_ring/: info.json  report.md
tasks/fedoseev_count_words_in_string/: info.json  report.md
tasks/fedoseev_gaussian_method_horizontal_strip_scheme/: info.json  report.md
tasks/fedoseev_multi_step_scheme_parallelization_by_characteristics/: info.json  report.md
tasks/kamaletdinov_a_gauss_vertical_scheme/: info.json  report.md
tasks/kamaletdinov_r_max_matrix_rows_elem/: info.json  report.md
tasks/kamaletdinov_r_qsort_batcher_oddeven_merge/: info.json  report.md
tasks/kaur_a_min_matrix/: report.md
tasks/kaur_a_multy_matrix/: report.md
tasks/kaur_a_vert_ribbon_scheme/: info.json  report.md
tasks/kazennova_a_convex_hull/: info.json  report.md
tasks/kazennova_a_image_smooth/: info.json  report.md
tasks/kazenova_a_vec_change_sign/: info.json  report.md
tasks/kichanova_k_count_letters_in_str/: info.json  report.md
tasks/kichanova_k_increase_contrast/: info.json  report.md
tasks/marov_count_letters/tests/: CMakeLists.txt
tasks/marov_count_letters/tests/functional/: main.cpp  ops_seq_tests.cpp
tasks/marov_radix_sort_double/tests/: CMakeLists.txt
tasks/marov_radix_sort_double/tests/functional/: main.cpp  ops_seq_tests.cpp
tasks/nozdrin_a_scalar_mult_vectors/: CMakeLists.txt  info.json  report.md
tasks/nozdrin_a_scalar_mult_vectors/common/include/: common.cpp  common.hpp
tasks/nozdrin_a_scalar_mult_vectors/mpi/include/: ops_mpi.hpp
tasks/nozdrin_a_scalar_mult_vectors/mpi/src/: ops_mpi.cpp
tasks/nozdrin_a_scalar_mult_vectors/seq/include/: ops_seq.hpp
tasks/nozdrin_a_scalar_mult_vectors/seq/src/: ops_seq.cpp
tasks/nozdrin_a_scalar_mult_vectors/tests/functional/: main.cpp
tasks/nozdrin_a_scalar_mult_vectors/tests/performance/: main.cpp
(+839 files in other folders)
